--- a/Source/Default.props
+++ b/Source/Default.props
@@ -12,9 +12,7 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Shipping|x64'">
     <Import Project="Default.$(Configuration).props" />
   </ImportGroup>
-  <PropertyGroup Label="UserMacros">
-    <BearBundle>$(SolutionDir)BearBundle\</BearBundle>
-  </PropertyGroup>
+  <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <OutDir>$(SolutionDir)..\Bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\Intermediate\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
@@ -37,9 +35,5 @@
       <OutputFile>$(SolutionDir)..\Lib\$(Platform)\$(Configuration)\$(TargetName)$(TargetExt)</OutputFile>
     </Lib>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <BuildMacro Include="BearBundle">
-      <Value>$(BearBundle)</Value>
-    </BuildMacro>
-  </ItemGroup>
+  <ItemGroup />
 </Project>
