--- a/Source/Editors/ActorEditor/ActorEditor.vcxproj
+++ b/Source/Editors/ActorEditor/ActorEditor.vcxproj
@@ -188,6 +188,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource1.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="UIBoneForm.h" />
     <ClInclude Include="UIKeyForm.h" />
@@ -198,6 +199,12 @@
     <ClInclude Include="UITopBarForm_ButtonList.h" />
     <ClInclude Include="UI_ActorMain.h" />
     <ClInclude Include="UI_ActorTools.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ActorEditor1.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
