--- a/Source/Editors/ActorEditor/ActorEditor.vcxproj.filters
+++ b/Source/Editors/ActorEditor/ActorEditor.vcxproj.filters
@@ -86,5 +86,18 @@
     <ClInclude Include="UIBoneForm.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ActorEditor1.rc">
+      <Filter>Файлы ресурсов</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
   </ItemGroup>
 </Project>
