--- a/Source/Editors/LevelEditor/LevelEditor.vcxproj
+++ b/Source/Editors/LevelEditor/LevelEditor.vcxproj
@@ -19,6 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="..\..\XrRender\Private\DetailManager.cpp" />
     <ClCompile Include="..\..\XrRender\Private\DetailManager_CACHE.cpp" />
     <ClCompile Include="..\..\XrRender\Private\DetailManager_Decompress.cpp" />
@@ -291,6 +294,7 @@
     <ClInclude Include="Editor\Utils\XrSEFactoryManager.h" />
     <ClInclude Include="Engine\XRayEditor.h" />
     <ClInclude Include="Engine\XrGameManager.h" />
+    <ClInclude Include="resource1.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="UI\ObjectList\UIObjectList.h" />
     <ClInclude Include="UI\ObjectList\UIObjectListItem.h" />
@@ -353,6 +357,9 @@
       <Project>{7e28883c-db86-4ee8-813a-991ba20c68c9}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="LevelEditor1.rc" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{7E13BFCC-55B0-4715-8BBB-84A143CCE84B}</ProjectGuid>
@@ -368,7 +375,7 @@
     <CharacterSet>MultiByte</CharacterSet>
     <CLRSupport>false</CLRSupport>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <VCToolsVersion>14.29.30133</VCToolsVersion>
+    <VCToolsVersion>14.35.32215</VCToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -385,7 +392,7 @@
     <CharacterSet>MultiByte</CharacterSet>
     <CLRSupport>false</CLRSupport>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <VCToolsVersion>14.29.30133</VCToolsVersion>
+    <VCToolsVersion>14.35.32215</VCToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
