--- a/Source/Editors/LevelEditor/LevelEditor.vcxproj.filters
+++ b/Source/Editors/LevelEditor/LevelEditor.vcxproj.filters
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Image Include="icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
     <Filter Include="UI">
       <UniqueIdentifier>{8de59519-90ea-45b4-aa15-357dbcb5c246}</UniqueIdentifier>
     </Filter>
@@ -1067,5 +1070,9 @@
     <ClInclude Include="Editor\Scene\CFromBuilder.h">
       <Filter>Editor\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="resource1.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="LevelEditor1.rc" />
   </ItemGroup>
 </Project>
